@@ -13,7 +13,7 @@ Currently, the parser supports:
 
  * public methods
  * public attributes read/write
- * custom read/write attributes (with void *userdata helper)
+ * custom read/write attributes (with void *userdata helper, union handling)
  * public class methods
  * public static attributes read/write
  * pointer to member (gc protected)
